--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <main>
     <section id="about-bike">
       <h2>About Josh's Bike - TUTTIO Soleil 01</h2>
-      <img src="https://i.imgur.com/M9KyI5P.jpg" alt="TUTTIO Soleil 01 eBike" class="bike-img" />
+      <img src="https://cdn.shopify.com/s/files/1/0042/0327/3375/products/soleil-01-e-bike-white-main-image_1024x1024@2x.jpg?v=1666812754" alt="TUTTIO Soleil 01 eBike" class="bike-img" />
       <p>Josh recently got this awesome <strong>TUTTIO Soleil 01</strong> eBike 🚴‍♂️⚡️ — a sleek, powerful ride perfect for urban exploration and daily adventures. He’s gearing up to record epic rides with a GoPro soon 🎥📸, so stay tuned for some amazing videos!</p>
     </section>
 
@@ -151,17 +151,17 @@
       <h2>Recommended Ebikes</h2>
       <div class="recommended-bikes">
         <div class="bike-card">
-          <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=400&q=80" alt="Rad Power Bikes RadRover 5" />
+          <img src="https://cdn.shopify.com/s/files/1/0042/0327/3375/products/rad-rad-rv3-fat-tire-electric-bike-black-20_1024x1024@2x.jpg?v=1673936550" alt="Rad Power Bikes RadRover 5" />
           <h3>Rad Power Bikes RadRover 5</h3>
           <p>A rugged fat-tire eBike great for all terrains and adventure seekers.</p>
         </div>
         <div class="bike-card">
-          <img src="https://images.unsplash.com/photo-1504215680853-026ed2a45def?auto=format&fit=crop&w=400&q=80" alt="Specialized Turbo Vado SL" />
+          <img src="https://www.specialized.com/media/wysiwyg/2023/turbo_vado_sl/2023_turbo_vado_sl_4.0_dawn_white.jpg" alt="Specialized Turbo Vado SL" />
           <h3>Specialized Turbo Vado SL</h3>
           <p>Lightweight and fast, perfect for city rides and commuting.</p>
         </div>
         <div class="bike-card">
-          <img src="https://images.unsplash.com/photo-1508168992046-cd4ee9aa1c33?auto=format&fit=crop&w=400&q=80" alt="Trek Super Commuter+" />
+          <img src="https://trekbikes-cdn.imgix.net/media/assets/2023/super-commuter-+_9-7-special-edition_22_27631_b_1.webp" alt="Trek Super Commuter+" />
           <h3>Trek Super Commuter+</h3>
           <p>High-performance eBike with great battery life for long rides.</p>
         </div>
@@ -171,7 +171,7 @@
     <section id="urbex">
       <h2>Urbex Adventures with Josh</h2>
       <p>Besides eBikes, Josh is passionate about urban exploration — discovering abandoned places and hidden gems 🏚️🧭. Follow his journeys for unique content that blends adventure and technology.</p>
-      <img src="https://i.imgur.com/yUQc6Yq.jpg" alt="Urban Exploration" class="bike-img" />
+      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80" alt="Urban Exploration" class="bike-img" />
     </section>
 
     <section id="youtube">
@@ -188,7 +188,8 @@
   </main>
 
   <footer>
-    &copy; 2025 Josh's Ebike & Urbex | Built by Clickey🚴‍♂️
+    &copy; 2025 Josh's Ebike & Urbex | Built with ❤️ by Clickey
   </footer>
 </body>
 </html>
+
