--- a/index.html
+++ b/index.html
@@ -3,45 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Josh's Ebike & Urbex</title>
+  <title>Josh's eBike Hub</title>
   <style>
-    /* Reset & basics */
-    * {
-      box-sizing: border-box;
-    }
     body {
-      margin: 0; 
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #121212;
+      background-color: #121212;
       color: #eee;
-      line-height: 1.6;
-    }
-    a {
-      color: #1DB954;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
+      margin: 0; padding: 0;
     }
     header {
-      background: #181818;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 2px solid #1DB954;
+      background: #1e1e1e;
+      padding: 1rem;
+      text-align: center;
+      border-bottom: 2px solid #f57c00;
     }
     header h1 {
-      font-weight: 700;
-      font-size: 1.8rem;
-      letter-spacing: 2px;
-      color: #1DB954;
       margin: 0;
-    }
-    nav a {
-      margin-left: 1.5rem;
-      font-weight: 600;
-      font-size: 1rem;
+      color: #f57c00;
+      font-size: 2.5rem;
     }
     main {
       max-width: 900px;
@@ -50,145 +29,143 @@
     }
     section {
       margin-bottom: 3rem;
-      background: #1E1E1E;
-      padding: 1.5rem 2rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #1DB954AA;
     }
     h2 {
-      color: #1DB954;
-      margin-top: 0;
+      border-bottom: 2px solid #f57c00;
+      padding-bottom: 0.3rem;
       margin-bottom: 1rem;
-      font-weight: 700;
-      letter-spacing: 1.5px;
+      color: #f57c00;
     }
-    .bike-img {
-      max-width: 100%;
-      border-radius: 6px;
-      box-shadow: 0 0 12px #1DB954;
-      margin-bottom: 1rem;
-    }
-    .recommended-bikes {
-      display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-      gap: 1.5rem;
-    }
-    .bike-card {
+    .bike {
+      display: flex;
+      gap: 1rem;
       background: #222;
       border-radius: 8px;
       padding: 1rem;
-      box-shadow: 0 0 8px #1DB95488;
-      transition: transform 0.2s ease;
+      align-items: center;
     }
-    .bike-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 12px #1DB954cc;
-    }
-    .bike-card img {
-      width: 100%;
-      border-radius: 6px;
-      margin-bottom: 0.75rem;
-    }
-    iframe {
+    .bike img {
+      width: 180px;
+      height: auto;
       border-radius: 8px;
-      box-shadow: 0 0 12px #1DB954cc;
-      width: 100%;
-      height: 315px;
+      object-fit: cover;
+      box-shadow: 0 0 10px #f57c00;
     }
-    .discord-btn {
-      display: inline-block;
-      background: #7289DA;
-      color: white;
-      font-weight: 700;
-      padding: 0.75rem 1.5rem;
-      border-radius: 30px;
-      text-align: center;
+    .bike-details {
+      flex: 1;
+    }
+    .bike-details h3 {
+      margin: 0 0 0.5rem 0;
+      color: #f9a825;
+    }
+    .bike-details p {
+      margin: 0;
+      line-height: 1.4;
+    }
+    .socials {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
       margin-top: 1rem;
-      box-shadow: 0 0 15px #7289DAaa;
-      transition: background-color 0.3s ease;
     }
-    .discord-btn:hover {
-      background: #5b6eae;
-      box-shadow: 0 0 20px #5b6eaecc;
+    .socials a {
+      color: #f57c00;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.2rem;
+      transition: color 0.3s;
+    }
+    .socials a:hover {
+      color: #ffb74d;
     }
     footer {
       text-align: center;
-      padding: 1.5rem 0;
-      background: #181818;
-      color: #666;
+      padding: 1rem;
       font-size: 0.9rem;
-      margin-top: 3rem;
-      user-select: none;
+      color: #666;
     }
-    @media(max-width: 600px) {
-      nav a {
-        margin-left: 1rem;
-        font-size: 0.9rem;
-      }
+    .discord-invite {
+      margin-top: 1rem;
+      text-align: center;
+    }
+    .discord-invite a {
+      background: #7289da;
+      color: white;
+      padding: 0.8rem 1.5rem;
+      border-radius: 25px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 0 10px #7289da;
+      transition: background 0.3s;
+      display: inline-block;
+    }
+    .discord-invite a:hover {
+      background: #5b6eae;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Josh's Ebike & Urbex</h1>
-    <nav>
-      <a href="#about-bike">About Bike</a>
-      <a href="#recommended">Recommended Bikes</a>
-      <a href="#urbex">Urbex Adventures</a>
-      <a href="#youtube">YouTube</a>
-      <a href="#discord">Discord</a>
-    </nav>
+    <h1>Josh's eBike Hub</h1>
   </header>
-
   <main>
-    <section id="about-bike">
-      <h2>About Josh's Bike - TUTTIO Soleil 01</h2>
-      <img src="https://cdn.shopify.com/s/files/1/0042/0327/3375/products/soleil-01-e-bike-white-main-image_1024x1024@2x.jpg?v=1666812754" alt="TUTTIO Soleil 01 eBike" class="bike-img" />
-      <p>Josh recently got this awesome <strong>TUTTIO Soleil 01</strong> eBike 🚴‍♂️⚡️ — a sleek, powerful ride perfect for urban exploration and daily adventures. He’s gearing up to record epic rides with a GoPro soon 🎥📸, so stay tuned for some amazing videos!</p>
-    </section>
-
-    <section id="recommended">
-      <h2>Recommended Ebikes</h2>
-      <div class="recommended-bikes">
-        <div class="bike-card">
-          <img src="https://cdn.shopify.com/s/files/1/0042/0327/3375/products/rad-rad-rv3-fat-tire-electric-bike-black-20_1024x1024@2x.jpg?v=1673936550" alt="Rad Power Bikes RadRover 5" />
-          <h3>Rad Power Bikes RadRover 5</h3>
-          <p>A rugged fat-tire eBike great for all terrains and adventure seekers.</p>
-        </div>
-        <div class="bike-card">
-          <img src="https://www.specialized.com/media/wysiwyg/2023/turbo_vado_sl/2023_turbo_vado_sl_4.0_dawn_white.jpg" alt="Specialized Turbo Vado SL" />
-          <h3>Specialized Turbo Vado SL</h3>
-          <p>Lightweight and fast, perfect for city rides and commuting.</p>
-        </div>
-        <div class="bike-card">
-          <img src="https://trekbikes-cdn.imgix.net/media/assets/2023/super-commuter-+_9-7-special-edition_22_27631_b_1.webp" alt="Trek Super Commuter+" />
-          <h3>Trek Super Commuter+</h3>
-          <p>High-performance eBike with great battery life for long rides.</p>
+    <section id="josh-bike">
+      <h2>Josh's Personal eBike</h2>
+      <div class="bike">
+        <img src="https://media.discordapp.net/attachments/1381743585950568450/1381764273465987273/Snapchat-2106833581.jpg?format=webp&width=567&height=1008" alt="Josh's TUTTIO Soleil 01" />
+        <div class="bike-details">
+          <h3>TUTTIO Soleil 01</h3>
+          <p>This is Josh's personal eBike, perfect for cruising the city and Urbex adventures. Recently acquired and gearing up with a GoPro to record all the rides and explorations! 🚴‍♂️📸</p>
         </div>
       </div>
     </section>
 
-    <section id="urbex">
-      <h2>Urbex Adventures with Josh</h2>
-      <p>Besides eBikes, Josh is passionate about urban exploration — discovering abandoned places and hidden gems 🏚️🧭. Follow his journeys for unique content that blends adventure and technology.</p>
-      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80" alt="Urban Exploration" class="bike-img" />
+    <section id="recommended-bikes">
+      <h2>Recommended eBikes</h2>
+
+      <div class="bike">
+        <img src="https://m.media-amazon.com/images/I/71z+NoZEzEL._AC_SL1500_.jpg" alt="Rad Power Bikes RadRover 5" />
+        <div class="bike-details">
+          <h3>Rad Power Bikes RadRover 5</h3>
+          <p>A popular fat-tire electric bike great for off-road trails and city streets alike. Reliable and powerful! ⚡🚴‍♂️</p>
+        </div>
+      </div>
+
+      <div class="bike">
+        <img src="https://th.bing.com/th/id/OIP.90D1npOh_llGFN3P5pQ2KQHaE8?rs=1&pid=ImgDetMain" alt="Specialized Turbo Vado SL" />
+        <div class="bike-details">
+          <h3>Specialized Turbo Vado SL</h3>
+          <p>Lightweight and fast electric commuter bike, perfect for daily rides with great battery life. ⚡🚲</p>
+        </div>
+      </div>
+
+      <div class="bike">
+        <img src="https://p.globalsources.com/IMAGES/PDT/B1188568717/Sur-ron-motocross-dirt-bike.jpg" alt="Sur-Ron Motocross Dirt Bike" />
+        <div class="bike-details">
+          <h3>Sur-Ron Motocross Dirt Bike</h3>
+          <p>A powerful electric dirt bike built for serious off-road adventures and adrenaline seekers. 🏁⚡</p>
+        </div>
+      </div>
     </section>
 
-    <section id="youtube">
-      <h2>Josh’s YouTube Channel</h2>
-      <p>Catch all the latest rides, mods, and urbex videos on Josh's YouTube! Subscribe and join the journey. 🚴‍♂️🎥</p>
-      <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=joshstuttio" allowfullscreen title="Josh's YouTube"></iframe>
+    <section id="socials">
+      <h2>Follow Josh</h2>
+      <p>Stay updated on Josh’s rides, Urbex adventures, and eBike mods!</p>
+      <div class="socials">
+        <a href="https://youtube.com/@joshstuttio" target="_blank" rel="noopener">▶️ YouTube</a>
+        <a href="https://www.tiktok.com/@tiktokjoshhhh" target="_blank" rel="noopener">🎵 TikTok</a>
+        <a href="https://discord.gg/YZkGFEeAFy" target="_blank" rel="noopener">💬 Discord</a>
+      </div>
     </section>
 
-    <section id="discord">
-      <h2>Join the Discord Community</h2>
-      <p>Connect with Josh, ask questions, share your rides, and be part of the crew! 🚀</p>
-      <a href="https://discord.gg/YZkGFEeAFy" target="_blank" rel="noopener" class="discord-btn">Join Discord</a>
+    <section class="discord-invite">
+      <h2>Join Our Discord Community</h2>
+      <a href="https://discord.gg/YZkGFEeAFy" target="_blank" rel="noopener">Join Josh’s eBike Discord 🚀</a>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Josh's Ebike & Urbex | Built with ❤️ by Clickey
+    <p>© 2025 Josh's eBike Hub — All rights reserved</p>
   </footer>
 </body>
 </html>
