--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
     <section id="josh-bike">
       <h2>Josh's Personal eBike</h2>
       <div class="bike">
-        <img src="https://media.discordapp.net/attachments/1381743585950568450/1381764273465987273/Snapchat-2106833581.jpg?format=webp&width=567&height=1008" alt="Josh's TUTTIO Soleil 01" />
+        <img src="https://i.imgur.com/G6XhI0r.jpg" alt="Josh's TUTTIO Soleil 01" />
         <div class="bike-details">
           <h3>TUTTIO Soleil 01</h3>
-          <p>This is Josh's personal eBike, perfect for cruising the city and Urbex adventures. Recently acquired and gearing up with a GoPro to record all the rides and explorations! 🚴‍♂️📸</p>
+          <p>Josh recently got this amazing eBike! He’s gearing up with a GoPro to record all his rides and epic Urbex explorations. 🚴‍♂️📸🧭</p>
         </div>
       </div>
     </section>
@@ -127,7 +127,7 @@
         <img src="https://m.media-amazon.com/images/I/71z+NoZEzEL._AC_SL1500_.jpg" alt="Rad Power Bikes RadRover 5" />
         <div class="bike-details">
           <h3>Rad Power Bikes RadRover 5</h3>
-          <p>A popular fat-tire electric bike great for off-road trails and city streets alike. Reliable and powerful! ⚡🚴‍♂️</p>
+          <p>A fat-tire electric bike perfect for city streets and off-road trails. Reliable, powerful, and stylish! ⚡🚴‍♂️</p>
         </div>
       </div>
 
@@ -135,7 +135,7 @@
         <img src="https://th.bing.com/th/id/OIP.90D1npOh_llGFN3P5pQ2KQHaE8?rs=1&pid=ImgDetMain" alt="Specialized Turbo Vado SL" />
         <div class="bike-details">
           <h3>Specialized Turbo Vado SL</h3>
-          <p>Lightweight and fast electric commuter bike, perfect for daily rides with great battery life. ⚡🚲</p>
+          <p>Lightweight and fast commuter bike with excellent battery life for daily rides. ⚡🚲</p>
         </div>
       </div>
 
@@ -143,7 +143,7 @@
         <img src="https://p.globalsources.com/IMAGES/PDT/B1188568717/Sur-ron-motocross-dirt-bike.jpg" alt="Sur-Ron Motocross Dirt Bike" />
         <div class="bike-details">
           <h3>Sur-Ron Motocross Dirt Bike</h3>
-          <p>A powerful electric dirt bike built for serious off-road adventures and adrenaline seekers. 🏁⚡</p>
+          <p>High-powered electric dirt bike for off-road adrenaline junkies and adventure seekers. 🏁⚡</p>
         </div>
       </div>
     </section>
