--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="bike">
         <img src="https://m.media-amazon.com/images/I/71z+NoZEzEL._AC_SL1500_.jpg" alt="Rad Power Bikes RadRover 5" />
         <div class="bike-details">
-          <h3>Rad Power Bikes RadRover 5</h3>
+          <h3>  TUTTIO Soleil 01 5</h3>
           <p>A fat-tire electric bike perfect for city streets and off-road trails. Reliable, powerful, and stylish! ⚡🚴‍♂️</p>
         </div>
       </div>
