--- a/index.html
+++ b/index.html
@@ -2,171 +2,111 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Josh's eBike Hub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Josh's E-Bike Adventures</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #121212;
-      color: #eee;
-      margin: 0; padding: 0;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #f0f0f0;
+      margin: 0;
+      padding: 0;
     }
     header {
-      background: #1e1e1e;
-      padding: 1rem;
+      background-color: #1f1f1f;
+      padding: 20px;
       text-align: center;
-      border-bottom: 2px solid #f57c00;
     }
     header h1 {
       margin: 0;
-      color: #f57c00;
-      font-size: 2.5rem;
+      font-size: 2.5em;
     }
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+    a {
+      color: #4ad8ff;
+      text-decoration: none;
     }
     section {
-      margin-bottom: 3rem;
+      padding: 30px;
     }
     h2 {
-      border-bottom: 2px solid #f57c00;
-      padding-bottom: 0.3rem;
-      margin-bottom: 1rem;
-      color: #f57c00;
+      border-bottom: 2px solid #4ad8ff;
+      padding-bottom: 10px;
+      margin-bottom: 20px;
     }
-    .bike {
+    .bike-list {
       display: flex;
-      gap: 1rem;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+    .bike-item {
       background: #222;
-      border-radius: 8px;
-      padding: 1rem;
-      align-items: center;
+      padding: 20px;
+      border-radius: 10px;
+      width: calc(50% - 20px);
     }
-    .bike img {
-      width: 180px;
-      height: auto;
-      border-radius: 8px;
-      object-fit: cover;
-      box-shadow: 0 0 10px #f57c00;
+    .bike-item img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 15px;
     }
-    .bike-details {
-      flex: 1;
+    .bike-item h3 {
+      margin: 10px 0 5px;
     }
-    .bike-details h3 {
-      margin: 0 0 0.5rem 0;
-      color: #f9a825;
-    }
-    .bike-details p {
-      margin: 0;
-      line-height: 1.4;
-    }
-    .socials {
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-      margin-top: 1rem;
-    }
-    .socials a {
-      color: #f57c00;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 1.2rem;
-      transition: color 0.3s;
-    }
-    .socials a:hover {
-      color: #ffb74d;
-    }
-    footer {
+    .discord-link {
+      background: #4ad8ff;
+      color: #000;
+      padding: 15px;
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-    .discord-invite {
-      margin-top: 1rem;
-      text-align: center;
-    }
-    .discord-invite a {
-      background: #7289da;
-      color: white;
-      padding: 0.8rem 1.5rem;
-      border-radius: 25px;
       font-weight: bold;
-      text-decoration: none;
-      box-shadow: 0 0 10px #7289da;
-      transition: background 0.3s;
-      display: inline-block;
-    }
-    .discord-invite a:hover {
-      background: #5b6eae;
+      font-size: 1.2em;
+      margin-top: 30px;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Josh's eBike Hub</h1>
+    <h1>Josh's E-Bike Adventures 🚴‍♂️</h1>
+    <p>Explore, Ride, Film — powered by passion and pixels 🎥</p>
   </header>
-  <main>
-    <section id="josh-bike">
-      <h2>Josh's Personal eBike</h2>
-      <div class="bike">
-        <img src="https://i.imgur.com/G6XhI0r.jpg" alt="Josh's TUTTIO Soleil 01" />
-        <div class="bike-details">
-          <h3>TUTTIO Soleil 01</h3>
-          <p>Josh recently got this amazing eBike! He’s gearing up with a GoPro to record all his rides and epic Urbex explorations. 🚴‍♂️📸🧭</p>
-        </div>
-      </div>
-    </section>
 
-    <section id="recommended-bikes">
-      <h2>Recommended eBikes</h2>
+  <section id="featured-bike">
+    <h2>🔥 Josh's E-Bike</h2>
+    <div class="bike-item">
+      <img src="https://i.imgur.com/1lPioOg.jpg" alt="Josh's Bike - TUTTIO Soleil 01" />
+      <h3>TUTTIO Soleil 01</h3>
+      <p>Josh recently got the TUTTIO Soleil 01 — a slick, powerful e-bike perfect for urban exploration and GoPro content. Catch him cruising the city, exploring urbex spots, and dropping 🔥 edits on YouTube and TikTok!</p>
+    </div>
+  </section>
 
-      <div class="bike">
-        <img src="https://m.media-amazon.com/images/I/71z+NoZEzEL._AC_SL1500_.jpg" alt="Rad Power Bikes RadRover 5" />
-        <div class="bike-details">
-          <h3>  TUTTIO Soleil 01 5</h3>
-          <p>A fat-tire electric bike perfect for city streets and off-road trails. Reliable, powerful, and stylish! ⚡🚴‍♂️</p>
-        </div>
+  <section id="recommended-bikes">
+    <h2>🔧 Recommended E-Bikes</h2>
+    <div class="bike-list">
+      <div class="bike-item">
+        <img src="https://m.media-amazon.com/images/I/71z+NoZEzEL._AC_SL1500_.jpg" alt="Ride1Up 700 Series" />
+        <h3>Ride1Up 700 Series</h3>
+        <p>A versatile e-bike with great range and speed, ideal for daily commuting and long rides. 🔋</p>
       </div>
 
-      <div class="bike">
-        <img src="https://th.bing.com/th/id/OIP.90D1npOh_llGFN3P5pQ2KQHaE8?rs=1&pid=ImgDetMain" alt="Specialized Turbo Vado SL" />
-        <div class="bike-details">
-          <h3>Specialized Turbo Vado SL</h3>
-          <p>Lightweight and fast commuter bike with excellent battery life for daily rides. ⚡🚲</p>
-        </div>
+      <div class="bike-item">
+        <img src="https://th.bing.com/th/id/OIP.90D1npOh_llGFN3P5pQ2KQHaE8?rs=1&pid=ImgDetMain" alt="Rad Power Bikes RadRover 5" />
+        <h3>Rad Power Bikes RadRover 5</h3>
+        <p>Rugged build and fat tires—perfect for trails, dirt roads, and tough terrain. 🌲</p>
       </div>
 
-      <div class="bike">
+      <div class="bike-item">
         <img src="https://p.globalsources.com/IMAGES/PDT/B1188568717/Sur-ron-motocross-dirt-bike.jpg" alt="Sur-Ron Motocross Dirt Bike" />
-        <div class="bike-details">
-          <h3>Sur-Ron Motocross Dirt Bike</h3>
-          <p>High-powered electric dirt bike for off-road adrenaline junkies and adventure seekers. 🏁⚡</p>
-        </div>
+        <h3>Sur-Ron Motocross Dirt Bike</h3>
+        <p>This electric motocross beast is all about speed and stunts. ⚡🏍️</p>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="socials">
-      <h2>Follow Josh</h2>
-      <p>Stay updated on Josh’s rides, Urbex adventures, and eBike mods!</p>
-      <div class="socials">
-        <a href="https://youtube.com/@joshstuttio" target="_blank" rel="noopener">▶️ YouTube</a>
-        <a href="https://www.tiktok.com/@tiktokjoshhhh" target="_blank" rel="noopener">🎵 TikTok</a>
-        <a href="https://discord.gg/YZkGFEeAFy" target="_blank" rel="noopener">💬 Discord</a>
-      </div>
-    </section>
-
-    <section class="discord-invite">
-      <h2>Join Our Discord Community</h2>
-      <a href="https://discord.gg/YZkGFEeAFy" target="_blank" rel="noopener">Join Josh’s eBike Discord 🚀</a>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 Josh's eBike Hub — All rights reserved</p>
-  </footer>
+  <section>
+    <h2>📱 Join Our Community</h2>
+    <p class="discord-link"><a href="https://discord.gg/YZkGFEeAFy" target="_blank">💬 Join the Discord to ride & chat!</a></p>
+  </section>
 </body>
 </html>
+
 
