--- a/index.html
+++ b/index.html
@@ -7,50 +7,57 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #111;
+      background: #0e0e0e;
       color: #f0f0f0;
       margin: 0;
       padding: 0;
     }
     header {
-      background-color: #1f1f1f;
-      padding: 20px;
+      background-color: #1c1c1c;
+      padding: 30px;
       text-align: center;
     }
     header h1 {
       margin: 0;
-      font-size: 2.5em;
+      font-size: 2.7em;
+    }
+    header p {
+      font-size: 1.1em;
+      color: #ccc;
     }
     a {
       color: #4ad8ff;
       text-decoration: none;
     }
     section {
-      padding: 30px;
+      padding: 40px 20px;
     }
     h2 {
       border-bottom: 2px solid #4ad8ff;
       padding-bottom: 10px;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
     .bike-list {
       display: flex;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 25px;
     }
     .bike-item {
-      background: #222;
+      background: #1a1a1a;
       padding: 20px;
-      border-radius: 10px;
-      width: calc(50% - 20px);
+      border-radius: 12px;
+      width: calc(33% - 20px);
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
     }
     .bike-item img {
       width: 100%;
       border-radius: 10px;
       margin-bottom: 15px;
+      height: auto;
     }
     .bike-item h3 {
-      margin: 10px 0 5px;
+      margin: 10px 0 8px;
+      font-size: 1.2em;
     }
     .discord-link {
       background: #4ad8ff;
@@ -61,13 +68,14 @@
       font-size: 1.2em;
       margin-top: 30px;
       border-radius: 10px;
+      display: inline-block;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Josh's E-Bike Adventures 🚴‍♂️</h1>
-    <p>Explore, Ride, Film — powered by passion and pixels 🎥</p>
+    <p>Explore. Ride. Film. Powered by passion and pixels 🎥</p>
   </header>
 
   <section id="featured-bike">
@@ -75,7 +83,7 @@
     <div class="bike-item">
       <img src="https://i.imgur.com/1lPioOg.jpg" alt="Josh's Bike - TUTTIO Soleil 01" />
       <h3>TUTTIO Soleil 01</h3>
-      <p>Josh recently got the TUTTIO Soleil 01 — a slick, powerful e-bike perfect for urban exploration and GoPro content. Catch him cruising the city, exploring urbex spots, and dropping 🔥 edits on YouTube and TikTok!</p>
+      <p>Josh recently got the TUTTIO Soleil 01 — a slick, powerful e-bike perfect for urban exploration, filming GoPro rides, and turning everyday streets into adventures. Follow his rides and urbex edits across the city and online. 🌆⚡</p>
     </div>
   </section>
 
@@ -85,26 +93,24 @@
       <div class="bike-item">
         <img src="https://m.media-amazon.com/images/I/71z+NoZEzEL._AC_SL1500_.jpg" alt="Ride1Up 700 Series" />
         <h3>Ride1Up 700 Series</h3>
-        <p>A versatile e-bike with great range and speed, ideal for daily commuting and long rides. 🔋</p>
+        <p>A versatile e-bike with great range and speed, ideal for commuting and long scenic rides. 🔋🛣️</p>
       </div>
-
       <div class="bike-item">
         <img src="https://th.bing.com/th/id/OIP.90D1npOh_llGFN3P5pQ2KQHaE8?rs=1&pid=ImgDetMain" alt="Rad Power Bikes RadRover 5" />
         <h3>Rad Power Bikes RadRover 5</h3>
-        <p>Rugged build and fat tires—perfect for trails, dirt roads, and tough terrain. 🌲</p>
+        <p>Fat tires & rugged design make it perfect for off-roading and dirt trails. 🌲💪</p>
       </div>
-
       <div class="bike-item">
-        <img src="https://p.globalsources.com/IMAGES/PDT/B1188568717/Sur-ron-motocross-dirt-bike.jpg" alt="Sur-Ron Motocross Dirt Bike" />
-        <h3>Sur-Ron Motocross Dirt Bike</h3>
-        <p>This electric motocross beast is all about speed and stunts. ⚡🏍️</p>
+        <img src="https://p.globalsources.com/IMAGES/PDT/B1188568717/Sur-ron-motocross-dirt-bike.jpg" alt="Sur-Ron Dirt Bike" />
+        <h3>Sur-Ron Motocross</h3>
+        <p>A high-powered electric dirt bike built for stunts and speed. ⚡🏍️</p>
       </div>
     </div>
   </section>
 
   <section>
     <h2>📱 Join Our Community</h2>
-    <p class="discord-link"><a href="https://discord.gg/YZkGFEeAFy" target="_blank">💬 Join the Discord to ride & chat!</a></p>
+    <a class="discord-link" href="https://discord.gg/YZkGFEeAFy" target="_blank">💬 Join the Discord to ride & chat!</a>
   </section>
 </body>
 </html>
