--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
       <h2>Recommended eBikes</h2>
 
       <div class="bike">
-        <img src="https://m.media-amazon.com/images/I/71z+NoZEzEL._AC_SL1500_.jpg" alt="Rad Power Bikes RadRover 5" />
+        <img src="https://m.media-amazon.com/images/I/71z+NoZEzEL._AC_SL1500_.jpg" alt="TUTTIO Soleil 01" />
         <div class="bike-details">
-          <h3>Rad Power Bikes RadRover 5</h3>
-          <p>A popular fat-tire electric bike great for off-road trails and city streets alike. Reliable and powerful! ⚡🚴‍♂️</p>
+          <h3>TUTTIO Soleil 01</h3>
+          <p>A sleek, high-performance electric bike built for both city cruising and off-road exploration. It features a powerful mid-drive motor, long-range battery, and front suspension for comfort and control. Perfect for commuting or content creation. ⚡🚴‍♂️</p>
         </div>
       </div>
 
@@ -169,4 +169,3 @@
   </footer>
 </body>
 </html>
-
