--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Josh's Ebike & Urbex</title>
   <style>
-    /* Reset & basics */
     * {
       box-sizing: border-box;
     }
     body {
-      margin: 0; 
+      margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #121212;
       color: #eee;
@@ -70,7 +69,7 @@
     }
     .recommended-bikes {
       display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 1.5rem;
     }
     .bike-card {
@@ -142,55 +141,7 @@
 
   <main>
     <section id="about-bike">
-      <h2>About Josh's Bike - TUTTIO Soleil 01</h2>
-      <img src="https://cdn.shopify.com/s/files/1/0042/0327/3375/products/soleil-01-e-bike-white-main-image_1024x1024@2x.jpg?v=1666812754" alt="TUTTIO Soleil 01 eBike" class="bike-img" />
-      <p>Josh recently got this awesome <strong>TUTTIO Soleil 01</strong> eBike 🚴‍♂️⚡️ — a sleek, powerful ride perfect for urban exploration and daily adventures. He’s gearing up to record epic rides with a GoPro soon 🎥📸, so stay tuned for some amazing videos!</p>
-    </section>
+      <h2>About Josh's Bike - TUTT
 
-    <section id="recommended">
-      <h2>Recommended Ebikes</h2>
-      <div class="recommended-bikes">
-        <div class="bike-card">
-          <img src="https://cdn.shopify.com/s/files/1/0042/0327/3375/products/rad-rad-rv3-fat-tire-electric-bike-black-20_1024x1024@2x.jpg?v=1673936550" alt="Rad Power Bikes RadRover 5" />
-          <h3>Rad Power Bikes RadRover 5</h3>
-          <p>A rugged fat-tire eBike great for all terrains and adventure seekers.</p>
-        </div>
-        <div class="bike-card">
-          <img src="https://www.specialized.com/media/wysiwyg/2023/turbo_vado_sl/2023_turbo_vado_sl_4.0_dawn_white.jpg" alt="Specialized Turbo Vado SL" />
-          <h3>Specialized Turbo Vado SL</h3>
-          <p>Lightweight and fast, perfect for city rides and commuting.</p>
-        </div>
-        <div class="bike-card">
-          <img src="https://trekbikes-cdn.imgix.net/media/assets/2023/super-commuter-+_9-7-special-edition_22_27631_b_1.webp" alt="Trek Super Commuter+" />
-          <h3>Trek Super Commuter+</h3>
-          <p>High-performance eBike with great battery life for long rides.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="urbex">
-      <h2>Urbex Adventures with Josh</h2>
-      <p>Besides eBikes, Josh is passionate about urban exploration — discovering abandoned places and hidden gems 🏚️🧭. Follow his journeys for unique content that blends adventure and technology.</p>
-      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80" alt="Urban Exploration" class="bike-img" />
-    </section>
-
-    <section id="youtube">
-      <h2>Josh’s YouTube Channel</h2>
-      <p>Catch all the latest rides, mods, and urbex videos on Josh's YouTube! Subscribe and join the journey. 🚴‍♂️🎥</p>
-      <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=joshstuttio" allowfullscreen title="Josh's YouTube"></iframe>
-    </section>
-
-    <section id="discord">
-      <h2>Join the Discord Community</h2>
-      <p>Connect with Josh, ask questions, share your rides, and be part of the crew! 🚀</p>
-      <a href="https://discord.gg/YZkGFEeAFy" target="_blank" rel="noopener" class="discord-btn">Join Discord</a>
-    </section>
-  </main>
-
-  <footer>
-    &copy; 2025 Josh's Ebike & Urbex | Built with ❤️ by Clickey
-  </footer>
-</body>
-</html>
 
 
