--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <section id="youtube">
       <h2>Josh’s YouTube Channel</h2>
       <p>Catch all the latest rides, mods, and urbex videos on Josh's YouTube! Subscribe and join the journey. 🚴‍♂️🎥</p>
-      <iframe src="https://www.youtube.com/@joshridesTV"></iframe>
+      <iframe  src= https://www.youtube.com/@joshridesTV></iframe>
     </section>
 
     <section id="discord">
