--- a/index.html
+++ b/index.html
@@ -171,7 +171,13 @@
     <section id="youtube">
       <h2>Josh’s YouTube Channel</h2>
       <p>Catch all the latest rides, mods, and urbex videos on Josh's YouTube! Subscribe and join the journey. 🚴‍♂️🎥</p>
-      <iframe  src= https://www.youtube.com/@joshridesTV></iframe>
+      <iframe 
+        src="https://www.youtube.com/embed/HTGyg7Fv6a4" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen
+      ></iframe>
     </section>
 
     <section id="discord">
