--- a/index.html
+++ b/index.html
@@ -191,7 +191,56 @@
     &copy; 2025 Josh's Ebike & Urbex | Built with ❤️ by Clickey
   </footer>
 </body>
-</html>
+</html> <!-- Sound Toggle Button + YouTube Embed -->
+<button id="sound-btn">Sound On 🔊</button>
+<iframe id="ytplayer" width="0" height="0"
+  src="https://www.youtube.com/embed/3IhS3hLvhEc?enablejsapi=1"
+  frameborder="0" allow="autoplay"></iframe>
+
+<script>
+  let isPlaying = false;
+  const btn = document.getElementById("sound-btn");
+
+  // Load YouTube Player API
+  const tag = document.createElement('script');
+  tag.src = "https://www.youtube.com/iframe_api";
+  document.body.appendChild(tag);
+
+  let ytPlayer;
+  function onYouTubeIframeAPIReady() {
+    ytPlayer = new YT.Player('ytplayer');
+  }
+
+  btn.addEventListener('click', () => {
+    if (!ytPlayer) return;
+    if (isPlaying) {
+      ytPlayer.pauseVideo();
+      btn.textContent = "Sound On 🔊";
+    } else {
+      ytPlayer.playVideo();
+      btn.textContent = "Sound Off 🔇";
+    }
+    isPlaying = !isPlaying;
+  });
+</script>
+
+<style>
+  #sound-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #1DB954;
+    color: white;
+    padding: 12px 18px;
+    border: none;
+    border-radius: 25px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 0 10px #1DB954aa;
+    z-index: 9999;
+  }
+</style>
+
 
 
 
