--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
   </footer>
 </body>
 </html> <!DOCTYPE html>
+<html <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -211,9 +212,6 @@
       z-index: 9999;
       box-shadow: 0 0 10px #1db954aa;
     }
-    iframe {
-      display: none;
-    }
   </style>
 </head>
 <body>
@@ -229,12 +227,11 @@
       player = new YT.Player("player", {
         height: "0",
         width: "0",
-        videoId: "3IhS3hLvhEc", // "Baby" by Lil Baby ft. DaBaby
+        videoId: "3IhS3hLvhEc", // Baby - Lil Baby ft. DaBaby
         playerVars: {
           autoplay: 0,
           controls: 0,
           rel: 0,
-          enablejsapi: 1,
           mute: 1
         },
         events: {
@@ -263,5 +260,3 @@
 
 </body>
 </html>
-
-   
