--- a/index.html
+++ b/index.html
@@ -229,4 +229,7 @@
     });
   </script>
 </body>
-</html>
+</html><audio id="backgroundAudio" loop>
+  <source src="compressed_audio.mp3" type="audio/mp3">
+</audio>
+
